# artixpkgbuilds

galaxy/0ad/: .nvchecker.toml  0ad-fix-premake.patch  PKGBUILD  README.md  af348d84.patch
galaxy/0ad-data/: PKGBUILD
galaxy/abduco/: .nvchecker.toml  PKGBUILD  REUSE.toml
galaxy/ack/: PKGBUILD
galaxy/acpilight/: .nvchecker.toml
galaxy/act-runner/: PKGBUILD
galaxy/act-runner-openrc/: PKGBUILD  README.md  act_runner.confd  act_runner.initd
galaxy/ada/: PKGBUILD
galaxy/adw-gtk-theme/: PKGBUILD  README.md
galaxy/aircrack-ng/: .nvchecker.toml  PKGBUILD
galaxy/alacritty/: PKGBUILD
galaxy/alpm-octopi-utils/: 0001-set-soversion.patch  PKGBUILD  README.md
galaxy/alsa-utils/: PKGBUILD
galaxy/amdgpu_top/: .nvchecker.toml  PKGBUILD  README.md
galaxy/amule/: .nvchecker.toml  PKGBUILD  amule.sysusers
galaxy/anki/: .nvchecker.toml  PKGBUILD  REUSE.toml  no-corepack.patch  reproducible-sveltekit.patch  strip-formatter-deps.patch  strip-python-pip-system-certs.patch  strip-type-checking-deps.patch
galaxy/anubis/: 0001-fix-web-Avoid-timestamping-main.mjs.gz.patch  PKGBUILD  README.md
galaxy/apulse/: PKGBUILD  README.md  apulse-stream.patch  apulse-threaded-mainloop.patch
galaxy/arc-icon-theme/: .nvchecker.toml
galaxy/archlinux-keyring/: .SRCINFO  PKGBUILD
galaxy/archlinux-mirrorlist/: .nvchecker.toml  PKGBUILD  REUSE.toml  mirrorlist
galaxy/arduino-cli/: .nvchecker.toml  PKGBUILD  README.md
galaxy/artix-archlinux-support/: PKGBUILD  arch-repos-hook.script
galaxy/artix-artwork/: PKGBUILD
galaxy/artix-docs/: PKGBUILD
galaxy/deploytix-git/: Cargo.toml  PKGBUILD  README.md
galaxy/deploytix-git/.artixlinux/: pkgbase.yaml  srcinfo.yaml
(+33229 files in other folders)
